<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/activationLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="20dp"
            android:visibility="visible"
            android:orientation="vertical">

            <EditText
                android:id="@+id/activationCode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:inputType="text"
                android:hint="@string/code"
                android:textAlignment="center"
                android:background="@drawable/edit_text_border"
                android:autofillHints="Activation Code"/>

            <EditText
                android:id="@+id/activationKey"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:inputType="textPassword"
                android:hint="@string/key"
                android:textAlignment="center"
                android:background="@drawable/edit_text_border"
                android:autofillHints="Activation Key"/>

            <Button
                android:id="@+id/initializeTerminal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/primary"
                android:text="@string/initialize"
                android:textColor="@color/white" />


        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <EditText-->
<!--                android:id="@+id/activationCode"-->
<!--                android:layout_width="fill_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="5dp"-->
<!--                android:padding="5dp"-->
<!--                android:inputType="text"-->
<!--                android:layout_weight="1"-->
<!--                android:hint="@string/code"-->
<!--                android:background="@drawable/edit_text_border"-->
<!--                android:autofillHints="Activation Code"/>-->

<!--            <EditText-->
<!--                android:id="@+id/activationKey"-->
<!--                android:layout_width="fill_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="5dp"-->
<!--                android:padding="5dp"-->
<!--                android:inputType="textPassword"-->
<!--                android:layout_weight="1"-->
<!--                android:hint="@string/key"-->
<!--                android:background="@drawable/edit_text_border"-->
<!--                android:autofillHints="Activation Key"/>-->
<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <Button-->
<!--                android:id="@+id/initializeTerminal"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="5dp"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@color/primary"-->
<!--                android:text="@string/initialize"-->
<!--                android:textColor="@color/white" />-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/getCloudMsg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/secondary"
                android:text="@string/get_cloud_message"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btConnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/secondary"
                android:text="@string/bt_connect"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/audioConnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/secondary"
                android:text="@string/audio_connect"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/processTransaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/secondary"
                android:text="@string/process_transaction"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/secondary"
                android:text="@string/Logout"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtTextHarnessPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginTop="20dp"
            android:scrollbars="vertical"
            android:textColor="@color/statusBar"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>